--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"firebase": "^10.12.4",
+		"flowbite-svelte-blocks": "^1.1.3",
 		"flowbite-svelte-icons": "^1.6.1"
 	}
 }
