--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 	"dependencies": {
 		"firebase": "^10.12.4",
 		"flowbite-svelte-blocks": "^1.1.3",
-		"flowbite-svelte-icons": "^1.6.1"
+		"flowbite-svelte-icons": "^1.6.1",
+		"svelte-multiselect": "^10.3.0"
 	}
 }
