--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	"type": "module",
 	"dependencies": {
 		"firebase": "^10.12.4",
+		"firebaseui": "^6.1.0",
 		"flowbite-svelte-blocks": "^1.1.3",
 		"flowbite-svelte-icons": "^1.6.1",
 		"svelte-multiselect": "^10.3.0"
