--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@vercel/analytics": "^1.3.1",
 		"firebase": "^10.12.4",
 		"firebaseui": "^6.1.0",
 		"flowbite-svelte-blocks": "^1.1.3",
