--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	"type": "module",
 	"dependencies": {
 		"@clerk/clerk-js": "^5.26.1",
+		"@sveltejs/adapter-vercel": "^5.10.2",
 		"@vercel/analytics": "^1.3.1",
 		"firebase": "^10.12.4",
 		"firebaseui": "^6.1.0",
